--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -291,6 +291,7 @@
     "template_applied_title": "Шаблон застосовано",
     "template_applied_message": "Налаштування шаблону було застосовано та збережено.",
     "apply_template_button": "Застосувати",
+    "edit_template_button": "Редагувати",
     "view_template_button": "Перегляд",
     "template_details_title": "Деталі шаблону",
     "close_button": "Закрити",
