--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -62,6 +62,11 @@
     "language_id_label": "Ідентифікатор мови (напр. uk-UK):",
     "language_prompt_label": "Промт для цієї мови:",
     "translation_model_label": "Модель для перекладу:",
+    "rewrite_prompt_label": "Промт для рерайту:",
+    "rewrite_model_label": "Модель для рерайту:",
+    "stage_download": "Завантаження",
+    "stage_transcription": "Транскрибація",
+    "stage_rewrite": "Рерайт",
     "stage_translation": "Переклад",
     "stage_img_prompts": "Промти",
     "stage_images": "Картинки",
@@ -128,6 +133,7 @@
     "googler_seed_label": "Seed:",
     "googler_negative_prompt_label": "Негативний промпт:",
     "googler_negative_prompt_placeholder": "Введіть негативний промпт",
+    "max_download_threads_label": "Макс. потоків завантаження:",
     "googler_api_key_missing": "Ключ API відсутній",
     "googler_usage_failed": "Не вдалося отримати дані",
     "gallery_tab_title": "Галерея",
