--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -60,8 +60,15 @@
     "manage_languages": "Manage Languages",
     "language_name_label": "Display Name:",
     "language_id_label": "Language ID (e.g. uk-UK):",
+    "enter_links_label": "Enter YouTube Links (one per line):",
+    "links_count_label": "Links count:",
     "language_prompt_label": "Prompt for this language:",
     "translation_model_label": "Translation Model:",
+    "rewrite_prompt_label": "Rewrite Prompt:",
+    "rewrite_model_label": "Rewrite Model:",
+    "stage_download": "Download",
+    "stage_transcription": "Transcription",
+    "stage_rewrite": "Rewrite",
     "stage_translation": "Translation",
     "stage_img_prompts": "Image Prompts",
     "stage_images": "Images",
