--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -60,8 +60,15 @@
     "manage_languages": "Управление языками",
     "language_name_label": "Отображаемое имя:",
     "language_id_label": "Идентификатор языка (напр. ru-RU):",
+    "enter_links_label": "Введите ссылки на YouTube (по одной в строке):",
+    "links_count_label": "Количество ссылок:",
     "language_prompt_label": "Промт для этого языка:",
     "translation_model_label": "Модель для перевода:",
+    "rewrite_prompt_label": "Промт для рерайта:",
+    "rewrite_model_label": "Модель для рерайта:",
+    "stage_download": "Загрузка",
+    "stage_transcription": "Транскрибация",
+    "stage_rewrite": "Рерайт",
     "stage_translation": "Перевод",
     "stage_img_prompts": "Промты для картинок",
     "stage_images": "Картинки",
