--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -60,6 +60,8 @@
     "manage_languages": "Керування мовами",
     "language_name_label": "Відображувана назва:",
     "language_id_label": "Ідентифікатор мови (напр. uk-UK):",
+    "enter_links_label": "Введіть посилання на YouTube (по одному в рядку):",
+    "links_count_label": "Кількість посилань:",
     "language_prompt_label": "Промт для цієї мови:",
     "translation_model_label": "Модель для перекладу:",
     "rewrite_prompt_label": "Промт для рерайту:",
