--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -29,6 +29,7 @@
     "clean_chars_label": "Чистых символов",
     "paragraphs_label": "Абзацев",
     "openrouter_api_key": "Ключ API OpenRouter:",
+    "max_concurrent_requests": "Макс. потоков AI (OpenRouter):",
     "enter_api_key": "Введите ваш API ключ",
     "check_connection": "Проверить соединение",
     "connection_status_not_checked": "Статус: Не проверено",
