--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -83,6 +83,8 @@
     "results_path_label": "Path to save results:",
     "browse_button": "Browse...",
     "select_directory": "Select Folder",
+    "translation_review_label": "Translation Review:",
+    "rewrite_review_label": "Rewrite Review:",
     "image_review_label": "Image Review:",
     "detailed_logging_label": "Detailed logging:",
     "queue_tab": "Queue",
@@ -252,7 +254,6 @@
     "prompts_count": "prompts",
     "characters_count": "characters",
     "review_group_title": "Review",
-    "translation_review_label": "Translation Review",
     "original_chars": "Original: {count} chars",
     "translated_chars": "Translated: {count} chars",
     "statistics_tab": "Statistics",
