--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -83,6 +83,8 @@
     "results_path_label": "Шлях для збереження результатів:",
     "browse_button": "Огляд...",
     "select_directory": "Виберіть папку",
+    "translation_review_label": "Контроль перекладу:",
+    "rewrite_review_label": "Контроль рерайту:",
     "image_review_label": "Контроль зображень:",
     "detailed_logging_label": "Детальне логування:",
     "queue_tab": "Черга",
@@ -253,7 +255,6 @@
     "prompts_count": "промптів",
     "characters_count": "символів",
     "review_group_title": "Контроль",
-    "translation_review_label": "Контроль перекладу",
     "original_chars": "Оригінал: {count} симв.",
     "translated_chars": "Переклад: {count} симв.",
     "statistics_tab": "Статистика",
