--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -83,6 +83,8 @@
     "results_path_label": "Путь для сохранения результатов:",
     "browse_button": "Обзор...",
     "select_directory": "Выберите папку",
+    "translation_review_label": "Контроль перевода:",
+    "rewrite_review_label": "Контроль рерайта:",
     "image_review_label": "Контроль изображений:",
     "detailed_logging_label": "Детальное логирование:",
     "queue_tab": "Очередь",
@@ -252,7 +254,6 @@
     "prompts_count": "промптов",
     "characters_count": "символов",
     "review_group_title": "Контроль",
-    "translation_review_label": "Контроль перевода",
     "original_chars": "Оригинал: {count} симв.",
     "translated_chars": "Перевод: {count} симв.",
     "statistics_tab": "Статистика",
