--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -164,8 +164,19 @@
     "thumbnail_regen_button": "Regenerate",
     "thumbnail_delete_button": "Delete",
     "load_demo_button": "Load Demo",
+    "api_key_label": "API Key:",
+    "check_balance_button": "Check Balance",
+    "checking_status": "Checking...",
+    "connection_successful": "Connection Successful!",
+    "connection_failed": "Connection Failed.",
+    "api_key_missing_error": "API Key is missing",
+    "enter_api_key_placeholder": "Enter your API key",
+    "success_title": "Success",
+    "error_title": "Error",
     "elevenlabs_api_key": "ElevenLabs API Key:",
+    "elevenlabs_unlim_api_key": "ElevenLabsUnlimited API Key:",
     "elevenlabs": "ElevenLabs",
+    "elevenlabs_unlim_settings_title": "ElevenLabs Unlim Settings",
     "balance_not_loaded": "Balance not loaded",
     "elevenlabs_template_label": "Voice template:",
     "no_templates_found": "No templates found",
