--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -164,8 +164,19 @@
     "thumbnail_regen_button": "Перегенерировать",
     "thumbnail_delete_button": "Удалить",
     "load_demo_button": "Загрузить демо",
+    "api_key_label": "Ключ API:",
+    "check_balance_button": "Проверить баланс",
+    "checking_status": "Проверка...",
+    "connection_successful": "Соединение успешно!",
+    "connection_failed": "Ошибка соединения.",
+    "api_key_missing_error": "Ключ API отсутствует",
+    "enter_api_key_placeholder": "Введите ваш API ключ",
+    "success_title": "Успех",
+    "error_title": "Ошибка",
     "elevenlabs_api_key": "Ключ API ElevenLabs:",
+    "elevenlabs_unlim_api_key": "Ключ API ElevenLabsUnlimited:",
     "elevenlabs": "ElevenLabs",
+    "elevenlabs_unlim_settings_title": "Настройки ElevenLabs Unlim",
     "balance_not_loaded": "Баланс не загружен",
     "elevenlabs_template_label": "Шаблон голоса:",
     "no_templates_found": "Шаблоны не найдены",
