--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -165,8 +165,19 @@
     "thumbnail_regen_button": "Перегенерувати",
     "thumbnail_delete_button": "Видалити",
     "load_demo_button": "Завантажити демо",
+    "api_key_label": "Ключ API:",
+    "check_balance_button": "Перевірити баланс",
+    "checking_status": "Перевірка...",
+    "connection_successful": "З'єднання успішне!",
+    "connection_failed": "З'єднання не вдалося.",
+    "api_key_missing_error": "Ключ API відсутній",
+    "enter_api_key_placeholder": "Введіть ваш API ключ",
+    "success_title": "Успіх",
+    "error_title": "Помилка",
     "elevenlabs_api_key": "Ключ API ElevenLabs:",
+    "elevenlabs_unlim_api_key": "Ключ API ElevenLabsUnlimited:",
     "elevenlabs": "ElevenLabs",
+    "elevenlabs_unlim_settings_title": "Налаштування ElevenLabs Unlim",
     "balance_not_loaded": "Баланс не завантажено",
     "elevenlabs_template_label": "Шаблон голосу:",
     "no_templates_found": "Шаблони не знайдені",
