--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -367,5 +367,8 @@
     "edgetts_pitch_label": "Тон EdgeTTS (Гц):",
     "edit_prompt_button": "Изменить промт (1 раз)",
     "edit_prompt_title": "Редактировать промт",
-    "edit_prompt_text": "Введите новый промт (для этой генерации):"
+    "edit_prompt_text": "Введите новый промт (для этой генерации):",
+    "aspect_ratio": "Соотношение сторон:",
+    "max_threads": "Макс. потоков:",
+    "elevenlabs_image_tab_title": "ElevenLabsImage"
 }
