--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -364,5 +364,8 @@
     "edgetts_pitch_label": "Тон EdgeTTS (Гц):",
     "edit_prompt_button": "Змінити промт (1 раз)",
     "edit_prompt_title": "Редагувати промт",
-    "edit_prompt_text": "Введіть новий промт (для цієї генерації):"
+    "edit_prompt_text": "Введіть новий промт (для цієї генерації):",
+    "aspect_ratio": "Співвідношення сторін:",
+    "max_threads": "Макс. потоків:",
+    "elevenlabs_image_tab_title": "ElevenLabsImage"
 }
