--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -372,5 +372,12 @@
     "max_threads": "Макс. потоков:",
     "elevenlabs_image_tab_title": "ElevenLabsImage",
     "edgetts_info": "Для этого сервиса не требуется никаких глобальных настроек, API-ключей или регистрации.",
-    "edgetts_test_link": "Вы можете протестировать сервис и выбрать голоса по этой ссылке:"
+    "edgetts_test_link": "Вы можете протестировать сервис и выбрать голоса по этой ссылке:",
+    "googler_buy_info": "Купить API ключ можно в телеграм боте:",
+    "elevenlabs_buy_info": "Купить API ключ (лимиты) для ElevenLabs можно здесь:",
+    "elevenlabs_unlim_buy_info": "Купить API ключ (лимиты) для ElevenLabs Unlimited можно здесь:",
+    "pollinations_info": "Вы можете протестировать сервис и получить токен по этой ссылке:",
+    "openrouter_info": "Здесь вы можете выбрать модели и пополнить баланс:",
+    "voicemaker_info": "Пополнить баланс и получить токен можно здесь:",
+    "assemblyai_info": "Получить API ключ можно на официальном сайте:"
 }
