--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -369,5 +369,12 @@
     "max_threads": "Макс. потоків:",
     "elevenlabs_image_tab_title": "ElevenLabsImage",
     "edgetts_info": "Для цього сервісу не потрібно ніяких глобальних налаштувань, API-ключів або реєстрації.",
-    "edgetts_test_link": "Ви можете протестувати сервіс та обрати голоси за цим посиланням:"
+    "edgetts_test_link": "Ви можете протестувати сервіс та обрати голоси за цим посиланням:",
+    "googler_buy_info": "Придбати API ключ можна в телеграм боті:",
+    "elevenlabs_buy_info": "Придбати API ключ (ліміти) для ElevenLabs можна тут:",
+    "elevenlabs_unlim_buy_info": "Придбати API ключ (ліміти) для ElevenLabs Unlimited можна тут:",
+    "pollinations_info": "Ви можете протестувати сервіс та отримати токен за цим посиланням:",
+    "openrouter_info": "Тут ви можете обрати моделі та поповнити баланс:",
+    "voicemaker_info": "Поповнити баланс та отримати токен можна тут:",
+    "assemblyai_info": "Отримати API ключ можна на офіційному сайті:"
 }
