--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,4 +1,5 @@
 {
+    "help_title": "Информация",
     "notification_tab": "Уведомления",
     "enable_notifications_label": "Включить уведомления",
     "telegram_user_id_label": "Telegram ID пользователя",
