--- a/assets/translations/hints/en.json
+++ b/assets/translations/hints/en.json
@@ -6,5 +6,7 @@
     "rewrite_review_label": "Pauses the program after text rewrite so you can check the quality of paraphrasing. \nYou will have the opportunity to regenerate the rewrite, as well as change rewrite settings and the prompt for one specific time.",
     "image_review_label": "Pauses the program after image generation, allowing you to review them in the gallery, delete or regenerate unsuccessful ones before video montage.",
     "prompt_count_control_label": "Prompt control allows you to control the number of prompts returned by the neural network. If, for example, your prompt is set to 50 prompts, \nbut the neural network returned 30 prompts due to an error, the program will automatically verify the count and regenerate the result if it differs from the specified number. \nIf after 3 attempts the program fails to get the desired number of prompts, the last received number of prompts will be used.",
-    "max_download_threads_label": "The number of simultaneous threads for downloading content during rewriting. More threads speed up work but may load the network."
+    "max_download_threads_label": "The number of simultaneous threads for downloading content during rewriting. More threads speed up work but may load the network.",
+    "max_concurrent_requests": "The number of simultaneous requests to the neural network. It is recommended to set from 5 to 10 depending on your API key limits. Higher numbers may lead to 'Rate Limit' errors.",
+    "openrouter_add_model_hint": "To add a new model, copy its full name from the OpenRouter website (e.g., 'google/gemini-2.0-flash-exp:free') and paste it into this field, then click the 'Add' button. The added model will appear in the list above."
 }
