--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -6,5 +6,7 @@
     "rewrite_review_label": "Останавливает программу после рерайта текста, чтобы вы могли проверить качество перефразирования.\nУ вас будет возможность перегенерировать рерайт, а также изменить настройки рерайта и промпт для одного конкретного раза.",
     "image_review_label": "Останавливает программу после генерации изображений, позволяя вам просмотреть их в галерее, удалить или перегенерировать неудачные перед монтажом видео.",
     "prompt_count_control_label": "Контроль промптов позволяет контролировать количество промптов, которые вам вернула нейросеть. Если, например, ваш промпт настроен на 50 промптов,\nа нейросеть вернула вам из-за ошибки 30 промптов, то программа автоматически сверит количество и, если оно будет отличаться от указанного количества, перегенерирует результат.\nЕсли после 3 попыток программе не удастся получить желаемое количество промптов, будет использоваться последнее полученное количество промптов.",
-    "max_download_threads_label": "Количество одновременных потоков для загрузки контента при рерайте. Больше потоков ускоряет работу, но может нагрузить сеть."
+    "max_download_threads_label": "Количество одновременных потоков для загрузки контента при рерайте. Больше потоков ускоряет работу, но может нагрузить сеть.",
+    "max_concurrent_requests": "Количество одновременных запросов к нейросети. Рекомендуется ставить от 5 до 10 в зависимости от лимитов вашего API ключа. Большее количество может привести к ошибкам 'Rate Limit'.",
+    "openrouter_add_model_hint": "Для добавления новой модели скопируйте ее полное название с сайта OpenRouter (например, 'google/gemini-2.0-flash-exp:free') и вставьте в это поле, после чего нажмите кнопку 'Добавить'. Добавленная модель появится в списке выше."
 }
