--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -6,5 +6,7 @@
     "rewrite_review_label": "Зупиняє програму після рерайту тексту, щоб ви могли перевірити якість перефразування.\nУ вас буде можливість перегенерувати рерайт, а також змінити налаштування рерайту та промт для одного конкретного разу.",
     "image_review_label": "Зупиняє програму після генерації зображень, дозволяючи вам переглянути їх у галереї, видалити або перегенерувати невдалі перед монтажем відео.",
     "prompt_count_control_label": "Контроль промтів дозволяе контролювати кількість промтів які вам повернула нейромережа, якщо наприклад у вас промт налаштований на 50 промтів,\nа нейромережа повернула вам через помилку 30 промтів, то программа автоматично звірить кількість і якщо вона буде відрізнятись від вказаної кількості то перегенеруе результат.\nЯкщо після 3 спроб программі не вдасться отримати бажану кількість промтів, то буде використовуватись остання отримана кількість промтів.",
-    "max_download_threads_label": "Кількість одночасних потоків для завантаження контенту при рерайті. Більше потоків пришвидшує роботу, але може навантажити мережу."
+    "max_download_threads_label": "Кількість одночасних потоків для завантаження контенту при рерайті. Більше потоків пришвидшує роботу, але може навантажити мережу.",
+    "max_concurrent_requests": "Кількість одночасних запитів до нейромережі. Рекомендується ставити від 5 до 10 залежно від лімітів вашого ключа API.\nБільша кількість може призвести до помилок 'Rate Limit'.",
+    "openrouter_add_model_hint": "Для додавання нової моделі, скопіюйте її повну назву з сайту OpenRouter (наприклад, 'google/gemini-2.0-flash-exp:free') та вставте в це поле,\nпісля чого натисніть кнопку 'Додати'. Додана модель з'явиться у списку вище."
 }
