--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -134,8 +134,8 @@
     "general_tab_title": "General",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Model:",
-    "pollinations_token_label": "Token (optional):",
-    "pollinations_token_placeholder": "Enter your token",
+    "pollinations_token_label": "API (optional):",
+    "pollinations_token_placeholder": "Enter your API key",
     "image_size_label": "Size (Width x Height):",
     "nologo_label": "Remove Logo",
     "enhance_prompt_label": "Enhance Prompt",
