--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -1,5 +1,5 @@
 {
-    "image_generation_provider_label": "Выберите сервис, который будет создавать картинки для вашего видео. \n\n- Pollinations - бесплатный с использованием моделей: flux, turbo. Для использования лучших моделей нужно получить ключ АПИ. \n- Googler - Наиболее качественный сервис с использованием модели google Imagen 4, АПИ ключ получается через телеграм бота. \n- ElevenLabsImage - Немного хуже по качеству чем Googler, но бесплатный.",
+    "image_generation_provider_label": "Выберите сервис, который будет создавать картинки для вашего видео. \n\n- Pollinations - бесплатный с использованием моделей: kontext, turbo. Для использования лучших моделей нужно получить ключ АПИ. \n- Googler - Наиболее качественный сервис с использованием модели google Imagen 4, АПИ ключ получается через телеграм бота. \n- ElevenLabsImage - Немного хуже по качеству чем Googler, но бесплатный.",
     "results_path_label": "Папка, в которую программа будет сохранять все созданные задачи, изображения и финальные видео. Рекомендуется выбирать диск с достаточным количеством свободного места.",
     "detailed_logging_label": "Включение расширенной записи технической информации о работе программы. Полезно для диагностики ошибок и понимания процессов генерации. Рекомендуется оставить включенным, так как программа будет очищать старые логи автоматически.",
     "translation_review_label": "Останавливает программу после перевода текста, чтобы вы могли проверить и подкорректировать его перед следующими этапами. \nУ вас будет возможность перегенерировать перевод, а также изменить настройки перевода и промпт для одного конкретного раза.",
@@ -9,5 +9,10 @@
     "max_download_threads_label": "Количество одновременных потоков для загрузки контента при рерайте. Больше потоков ускоряет работу, но может нагрузить сеть.",
     "max_concurrent_requests": "Количество одновременных запросов к нейросети. Рекомендуется ставить от 5 до 10 в зависимости от лимитов вашего API ключа. Большее количество может привести к ошибкам 'Rate Limit'.",
     "openrouter_add_model_hint": "Для добавления новой модели скопируйте ее полное название с сайта OpenRouter (например, 'google/gemini-2.0-flash-exp:free') и вставьте в это поле, после чего нажмите кнопку 'Добавить'. Добавленная модель появится в списке выше.",
-    "char_limit": "Это максимальное количество символов, которое позволяет озвучить ваш текущий тарифный план Voicemaker за один запрос.\nЕсли текст длиннее, программа автоматически разделит его на части (чанки) в соответствии с этим лимитом."
+    "char_limit": "Это максимальное количество символов, которое позволяет озвучить ваш текущий тарифный план Voicemaker за один запрос.\nЕсли текст длиннее, программа автоматически разделит его на части (чанки) в соответствии с этим лимитом.",
+    "pollinations_model_label": "Выбор модели для генерации изображений. Разные модели имеют разные стили и возможности.",
+    "pollinations_token_label": "Ввод АПІ ключа (токена) Pollinations. \nПри использовании АПІ доступны все модели сервиса, а без АПІ только kontext и turbo.",
+    "image_size_label": "Настройка разрешения сгенерированных изображений (Ширина x Высота). Рекомендуется использовать стандартные размеры, например 1280x720.",
+    "nologo_label": "Если включено, программа будет пытаться генерировать изображения без водяного знака Pollinations.",
+    "enhance_prompt_label": "Автоматическое улучшение вашего текстового запроса нейросетью для получения более детализированного и качественного результата."
 }
