--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -134,8 +134,8 @@
     "general_tab_title": "Общие",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Модель:",
-    "pollinations_token_label": "Токен (необязательно):",
-    "pollinations_token_placeholder": "Введите ваш токен",
+    "pollinations_token_label": "АПІ (необязательно):",
+    "pollinations_token_placeholder": "Введите ваш АПІ ключ",
     "image_size_label": "Размер (Ширина x Высота):",
     "nologo_label": "Убрать логотип",
     "enhance_prompt_label": "Улучшить промт",
