--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -1,5 +1,5 @@
 {
-    "image_generation_provider_label": "Оберіть сервіс, який буде створювати картинки для вашого відео. \n\n- Pollinations - безкоштовний з використанням моделей: flux, turbo. Для використання кращих моделей потрібно отримати ключ АПІ.  \n- Googler - Найбільш якісний сервіс з використанням моделі google Imagen 4, АПІ ключ отримуеться через телеграм бота. \n- ElevenLabsImage - Трошки гірший по якості ніж Googler, але безкоштовний.",
+    "image_generation_provider_label": "Оберіть сервіс, який буде створювати картинки для вашого відео. \n\n- Pollinations - безкоштовний з використанням моделей: kontext, turbo. Для використання кращих моделей потрібно отримати ключ АПІ.  \n- Googler - Найбільш якісний сервіс з використанням моделі google Imagen 4, АПІ ключ отримуеться через телеграм бота. \n- ElevenLabsImage - Трошки гірший по якості ніж Googler, але безкоштовний.",
     "results_path_label": "Папка, куди програма буде зберігати всі створені завдання, зображення та фінальні відео. Рекомендується обирати диск з достатньою кількістю вільного місця.",
     "detailed_logging_label": "Увімкнення розширеного запису технічної інформації про роботу програми. Корисно для діагностики помилок та розуміння процесів генерації. \nРекомендується залишити увімкненим, адже програма буде очищати старі логи автоматично.",
     "translation_review_label": "Зупиняє програму після перекладу тексту, щоб ви могли перевірити та підкоригувати його перед наступними етапами. \nУ вас буде можливість перегенерувати переклад, а також змінити налаштування перекладу та промт для одного конкретного разу.",
@@ -9,5 +9,10 @@
     "max_download_threads_label": "Кількість одночасних потоків для завантаження контенту при рерайті. Більше потоків пришвидшує роботу, але може навантажити мережу.",
     "max_concurrent_requests": "Кількість одночасних запитів до нейромережі. Рекомендується ставити від 5 до 10 залежно від лімітів вашого ключа API.\nБільша кількість може призвести до помилок 'Rate Limit'.",
     "openrouter_add_model_hint": "Для додавання нової моделі, скопіюйте її повну назву з сайту OpenRouter (наприклад, 'google/gemini-2.0-flash-exp:free') та вставте в це поле,\nпісля чого натисніть кнопку 'Додати'. Додана модель з'явиться у списку вище.",
-    "char_limit": "Це максимальна кількість символів, яку дозволяє озвучити ваш поточний тарифний план Voicemaker за один запит.\nЯкщо текст довший, програма автоматично розділить його на частини (чанки) відповідно до цього ліміту."
+    "char_limit": "Це максимальна кількість символів, яку дозволяє озвучити ваш поточний тарифний план Voicemaker за один запит.\nЯкщо текст довший, програма автоматично розділить його на частини (чанки) відповідно до цього ліміту.",
+    "pollinations_model_label": "Вибір моделі для генерації зображень. Різні моделі мають різні стили та можливості.",
+    "pollinations_token_label": "Введення АПІ ключа (токену) Pollinations. \nПри використанні АПІ доступні всі моделі сервісу, а без АПІ тільки kontext та turbo.",
+    "image_size_label": "Налаштування роздільної здатності згенерованих зображень (Ширина x Висота). Рекомендується використовувати стандартні розміри, наприклад 1280x720.",
+    "nologo_label": "Якщо увімкнено, програма намагатиметься генерувати зображення без водяного знака Pollinations.",
+    "enhance_prompt_label": "Автоматичне покращення вашого текстового запиту нейромережею для отримання більш деталізованого та якісного результату."
 }
