--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -134,8 +134,8 @@
     "general_tab_title": "Загальні",
     "pollinations_tab_title": "Pollinations",
     "pollinations_model_label": "Модель:",
-    "pollinations_token_label": "Токен (необов'язково):",
-    "pollinations_token_placeholder": "Введіть ваш токен",
+    "pollinations_token_label": "АПІ (необов'язково):",
+    "pollinations_token_placeholder": "Введіть ваш АПІ ключ",
     "image_size_label": "Розмір (Ширина x Висота):",
     "nologo_label": "Прибрати логотип",
     "enhance_prompt_label": "Покращити промт",
